<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/back5">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/strelka"
        android:layout_gravity="right"
        android:layout_marginRight="25dp"/>

    <EditText
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:ems="10"
        android:textColor="@color/white"
        android:hint="@string/time"
        android:inputType="number"
        android:textSize="20dp"
        android:gravity="center"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />
    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:ems="10"
        android:textColor="@color/white"
        android:hint="@string/kolvop"
        android:inputType="number"
        android:textSize="20dp"
        android:gravity="center"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:ems="10"
        android:textSize="20dp"
        android:textColorHint="@color/white"
        android:hint="@string/nazvanietablici"
        android:inputType="text"
        android:text=""
        android:gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_press"
        android:foreground="@drawable/btn_press"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textColorHint="@color/png" />

</LinearLayout>